# distributed-kv-store

./: .gitignore  DESIGN.md  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  kvctl.py  pyproject.toml  requirements.txt
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
app/: main.py
app/cluster/: __init__.py  consistent_hash.py  health_checker.py  node_config.py  router.py  shard_manager.py
app/storage/: __init__.py  engine.py  version_token.py  wal.py
benchmarks/: benchmark_distribution.py  benchmark_throughput.py
docs/: BENCHMARK_DEEP_DIVE.md
docs/decisions/: 001-consistent-hashing-over-modulo.md  002-synchronous-vs-async-replication.md  003-why-not-raft.md  004-ap-over-cp.md  005-wal-before-memory.md  006-batched-wal-durability.md  007-binary-wal-crc.md  008-tombstone-delete-model.md  009-ttl-expiration.md  010-cas-conditional-writes.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  kv-store.json
tests/: test_api.py
tests/integration/: test_chaos.py  test_persistence.py
tests/unit/: test_cas.py  test_cluster_router.py  test_consistent_hash.py  test_health_checker.py  test_leader_promotion.py  test_replication.py  test_shard_manager.py  test_storage.py  test_tombstones.py  test_ttl.py  test_versioning.py  test_wal.py
